<resources>
    <string name="app_name">AreaCalculatorApp</string>
    <string name="length_1">Length 1</string>
    <string name="length_2">Length 2</string>
    <string name="triangle">Triangle</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="selectedShapedText">Select a shape</string>
    <string name="calculate">Calculate</string>
    <string name="area" />
    <string name="clear">Clear</string>
</resources>
